--- a/next.html
+++ b/next.html
@@ -17,7 +17,7 @@
     </section>
 
     <script>
-        if(localStorage.getItem('darkMode')) {
+        if(localStorage.getItem('darkMode')==='true') {
             document.body.classList.add('dark-theme');
         }
     </script>
